best fit on mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h3>I do (video) games.</h3>
 			</div>
 			<div>
-				<p>Hey! I&#39;m an experienced <b>Game Designer</b> from Barcelona, currently working on <b>Crysis 4</b> at <b>Crytek</b>.</p>
+				<p>Hey! I&#39;m a <b>Game Designer</b> from Barcelona, currently working on <b>Crysis 4</b> at <b>Crytek</b>.</p>
 				<p>Some games I&#39;ve worked on:</p>
 				<ul>
 				<li>Crysis 4, Crytek</li>
