--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 				<h3>I do (video) games.</h3>
 			</div>
 			<div>
-				<p>Hey! I&#39;m a <b>Game Designer</b> from Barcelona, currently working on <b>Crysis 4</b> at <b>Crytek</b>.</p>
+				<p>Hey! I&#39;m a <b>Game Designer</b> from Barcelona, currently working on <b>Crysis 4</b> and <b>Hunt: Showdown 1986</b> at <b>Crytek</b>.</p>
 				<p>Some games I&#39;ve worked on:</p>
 				<ul>
 				<li>Crysis 4, Crytek</li>
-				<li>Aragami 2, Lince Works (2021)</li>
+				<li><a href="https://store.steampowered.com/app/594650/Hunt_Showdown_1896/">Hunt: Showdown 1986</a>, Crytek (2024)</li>
+				<li><a href="https://store.steampowered.com/app/1158370/Aragami_2/">Aragami 2</a>, Lince Works (2021)</li>
 				<li>Aragami VR, Lince Works (Internal prototype)</li>
 				<li>Project Sera, Lince Works (Internal prototype)</li>
 				<li>Reservoir Dogs: Bloody Days (2017)</li>
